--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   gallery_saver: ^2.3.2
   share_plus: ^7.0.2
   flutter_staggered_grid_view: ^0.6.2
+  shimmer: ^3.0.0
+  video_thumbnail:
 
 
 
